--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "name": "pokedex-api",
-  "version": "1.0.0",
-  "description": "Pokedex API",
-  "main": "app.js",
-  "scripts": {
-    "dev": "NODE_ENV=development ./node_modules/.bin/nodemon app.js",
-    "start": "NODE_ENV=production node app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gabriel-barreto/pokedex-api.git"
-  },
-  "keywords": [
-    "pokedex",
-    "api",
-    "fatec",
-    "itapetininga"
-  ],
-  "author": "Gabriel Barreto <barreto-gabriel@outlook.com> (https://gabriel-barreto.tech/)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gabriel-barreto/pokedex-api/issues"
-  },
-  "homepage": "https://github.com/gabriel-barreto/pokedex-api#readme",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "morgan": "^1.9.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.17.5"
-  }
+    "name": "pokedex-api",
+    "version": "1.0.0",
+    "description": "Pokedex API",
+    "main": "app.js",
+    "scripts": {
+        "dev": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/nodemon app.js",
+        "start": "./node_modules/.bin/cross-env NODE_ENV=production node app.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/gabriel-barreto/pokedex-api.git"
+    },
+    "keywords": [
+        "pokedex",
+        "api",
+        "fatec",
+        "itapetininga"
+    ],
+    "author": "Gabriel Barreto <barreto-gabriel@outlook.com> (https://gabriel-barreto.tech/)",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/gabriel-barreto/pokedex-api/issues"
+    },
+    "homepage": "https://github.com/gabriel-barreto/pokedex-api#readme",
+    "dependencies": {
+        "body-parser": "^1.18.3",
+        "express": "^4.16.3",
+        "morgan": "^1.9.0"
+    },
+    "devDependencies": {
+        "cross-env": "^5.2.0",
+        "nodemon": "^1.17.5"
+    },
+    "engines": {
+        "npm": "~6.4.0",
+        "node": "~10.7.0"
+    }
 }
